# my_finance_api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  load_model_artifacts.py  pyproject.toml  test.ipynb
.github/: copilot-instructions.md  deploy.yaml
.github/instructions/: copilot-instructions.md  repo-facts.instructions.md
.github/skills/: domain.md
.github/workflows/: deploy.yml
app/: auth.py  database_client.py  dependencies.py  main.py  model_store.py  rate_limiter.py  schemas.py  security.py  setup_logging.py
app/api/: dependencies.py  dependencys.py  v1.py
app/api/dependencies/: providers.py
app/api/routers/: __init__.py  assets.py  auth.py  categories.py  filetypes.py  health.py  io.py  model.py  reporting.py  transactions.py
app/core/: container.py  database_client.py  handlers.py  rate_limiter.py  security.py  settings.py  setup_logging.py
app/core/errors/: auth.py  base_error.py  domain.py  handlers.py  infra.py
app/core/exceptions/: auth.py  base.py  database.py  file.py  model.py
app/schemas/: __init__.py  assets.py  auth.py  database.py  error.py  filetypes.py  io.py  model.py  reporting.py  transactions.py
app/services/: assets.py  auth.py  categories.py  container.py  file_types.py  google_oauth.py  io.py  jwt.py  model.py  model_store.py  reporting.py  transactions.py  users.py
config/: bigquery_tables.yaml
mlruns/0/: meta.yaml
model_artifacts/: MLmodel  conda.yaml  input_example.json  requirements.txt  serving_input_example.json  wrapper.py
model_artifacts/artifacts/: pipeline.pkl  polymodel-1.1.2-py3-none-any.whl
scripts/: bigquery_table_config.py  create_local_dev_tokens.py  init_gbq_tables.py  load_local_model_artifacts.sh  load_model_artifacts.py  run_local.sh  run_local_docker.sh  run_local_terminal.sh  uv_sync.sh
test/: test_app_model_endpoints.py  test_model_store.py  test_service.py
tests/: conftest.py  test_api_auth.py  test_api_categories.py  test_api_health.py  test_api_model_store.py  test_app_model_endpoints.py  test_categories.py  test_container.py  test_gcp.py  test_jwt_service.py  test_model_store.py  test_users.py
tests/helpers/: duckdb_mock_client.py  fake_services.py
tests/integration/: test_endpoint_integration.py  test_transaction_integration.py
tests/unit/: test_api_auth.py  test_api_categories.py  test_api_health.py  test_api_io.py  test_api_model_store.py  test_api_transactions.py  test_categories.py  test_container.py  test_file_types_service.py  test_gcp.py  test_google_oauth_service.py  test_io_service.py  test_jwt_service.py  test_mock_schema_validation.py  test_model_service.py  test_model_store.py  test_settings.py  test_transaction_service.py  test_users.py
