[project]
name = "my-finance-api"
version = "0.1.0"
description = "Backend API for financial data analysis and ML model serving"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "fastapi>=0.128.0",
    "google-cloud-bigquery>=3.39.0",
    "google-cloud-storage>=3.7.0",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "polymodel==2.1.0",
    "pytest>=9.0.2",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "keyring>=25.7.0",
    "keyrings-google-artifactregistry-auth>=1.1.2",
]

